--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,16 @@
+.box{
+    text-align: center;
+    background: rgba(128, 128, 128, 0.507);
+}
 
-/* 
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.box div{
+    display: inline-block;
+    font-size: 200px;
+    line-height: 200px;
+    height: 200px;
+    background-color: rgba(128, 128, 128, 0.527);
+    padding: 10px;
+    margin: 4px; 
+}
 
-*/
